# tapko_bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  env.conf  install_script.sh  start.sh  tapko_bot.service  test.md
docker/: DockerFile  docker-compose.yml  install_prereq.sh
src/: main.cpp  verify.cpp
src/libs/: messages.cpp
src/libs/postgres/: SQL.h  ma.cpp  postgresql.cpp  postgresql.h  tables.cpp
